kubernetes/apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: qbittorrent
  namespace: media

spec:
  replicas: 1

  selector:
    matchLabels:
      app: qbittorrent

  template:
    metadata:
      labels:
        app: qbittorrent

    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest

        ports:
         - containerPort: 8080

        volumeMounts:
        - name: media
          mountPath: /media
        - name: config
          mountPath: /config

      volumes:
      - name: media
        hostPath:
          path: /home/balazs/media
      - name: config
        hostPath:
          path: /home/balazs/appdata/qbittorrent
