kubernetes/apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: qbittorrent
  namespace: media

spec:
  selector:
    app: qbittorrent

  ports:
  - port: 8080
    targetPort: 8080

  type: ClusterIP
