kubernetes/apps/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: qbittorrent
  namespace: media

spec:
  ingressClassName: traefik

  rules:
  - host: qbittorrent.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: qbittorrent

            port:
              number: 8080
